grammar.js
    source_file: $ => optional($._statements),

    _statements: $ => seq(
      repeat($._terminator),
      $.statement,
      repeat(seq($._terminator, optional($.statement))),
    ),

    // Body block used inside class/module/method/etc definitions
    _body: $ => seq(
      $._terminator,
      optional($._statements),
    ),

    _terminator: $ => choice('\n', ';'),

    // =========================================================================
    // REQUIRE / INCLUDE / EXTEND
    // =========================================================================
    assignment: $ => prec.right(PREC.ASSIGN, seq(
      $.assignment_target,
      '=',
      $.expression,
    )),

    operator_assignment: $ => prec.right(PREC.ASSIGN, seq(
      $.assignment_target,
      choice('+=', '-=', '*=', '/=', '//=', '%=', '|=', '&=', '^=', '**=', '<<=', '>>=', '||=', '&&=', '&+=', '&-=', '&*=', '&**='),
      $.expression,
    )),

    assignment_target: $ => choice(
      $.identifier,
      $.instance_variable,
      $.class_variable,
      $.global_variable,
      $.constant,
      $.index_expression,
      $.dot_expression,
    ),

    binary_expression: $ => {
      const table = [
        [PREC.OR, '||'],
        [PREC.AND, '&&'],
        [PREC.COMPARE, choice('==', '!=', '<', '>', '<=', '>=', '<=>', '===', '=~', '!~')],
        [PREC.BIT_OR, '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-', '&+', '&-')],
        [PREC.MULTIPLY, choice('*', '/', '//', '%', '&*')],
        [PREC.POWER, choice('**', '&**')],
      ];

      return choice(
        ...table.map(([prec_val, op]) =>
          prec.left(/** @type {number} */ (prec_val), seq(
            field('left', $.expression),
            field('operator', /** @type {any} */ (op)),
            field('right', $.expression),
          ))
        ),
      );
    },

    range_expression: $ => prec.left(PREC.RANGE, seq(
      field('begin', $.expression),
      field('operator', choice('..', '...')),
      field('end', $.expression),
    )),

    not_nil_expression: $ => prec(PREC.DOT, seq(
      $.expression,
      '.not_nil!',
    )),

    // =========================================================================
    // CALLS & MEMBER ACCESS
    // =========================================================================
    call: $ => prec.left(PREC.CALL, choice(
      // method(args)
      seq(
        field('method', $._method_name),
        field('arguments', $.argument_list),
        optional($.block),
      ),
      // method args (no parens)
      seq(
        field('method', $._method_name),
        field('arguments', $.argument_list_no_parens),
        optional($.block),
      ),
      // method { block }
      seq(
        field('method', $._method_name),
        $.block,
      ),
    )),

    dot_expression: $ => prec.left(PREC.DOT, seq(
      field('receiver', $.expression),
      choice('.', '&.'),
      field('method', choice($._method_name, $.constant)),
      optional(field('arguments', $.argument_list)),
      optional($.block),
    )),

    index_expression: $ => prec.left(PREC.INDEX, seq(
      field('receiver', $.expression),
      '[',
      commaSep($.expression),
      ']',
      optional('?'),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.argument),
      ')',
    ),

    argument_list_no_parens: $ => prec.left(-1, seq(
      $.argument,
      repeat(seq(',', $.argument)),
    )),

    argument: $ => choice(
      $.expression,
      $.named_argument,
      $.splat_argument,
      $.double_splat_argument,
      $.block_argument,
      $.out_argument,
    ),

    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $.expression),
    ),

    block_argument: $ => choice(
      seq('&', $.expression),
      $.short_block,
    ),

    out_argument: $ => seq('out', $.identifier),

    // Short block syntax: &.method or &.method(args)
    short_block: $ => seq(
      '&.',
      field('method', $._method_name),
      optional(field('arguments', $.argument_list)),
    ),

    // =========================================================================
    // BLOCKS
    // =========================================================================
    block: $ => choice(
      seq(
        'do',
        optional($.block_params),
        optional($._statements),
        'end',
      ),
      seq(
        '{',
        optional($.block_params),
        optional($._statements),
        '}',
      ),
    ),

    block_params: $ => seq(
      '|',
      commaSep1($.block_param),
      '|',
    ),

    block_param: $ => seq(
      $.identifier,
      optional(seq(':', $.type)),
    ),

    // =========================================================================
    // CONTROL FLOW
    // =========================================================================
    then_block: $ => choice(
      seq('then', optional($._statements)),
      seq($._terminator, optional($._statements)),
    ),

    case_expression: $ => seq(
      'case',
      optional(field('value', $.expression)),
      $._terminator,
      repeat1($.when_clause),
      optional($.else_clause),
      'end',
    ),

    when_clause: $ => seq(
      'when',
      commaSep1($.when_value),
      $.then_block,
    ),

    when_value: $ => choice(
      $.expression,
      seq('.', $._method_name),  // implicit enum member or method
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $.expression),
      $.then_block,
      'end',
    ),

    modifier_if: $ => prec.left(-2, seq($.expression, 'if', $.expression)),
    return_statement: $ => prec.left(seq('return', optional($.expression))),

    break_statement: $ => prec.left(seq('break', optional($.expression))),

    next_statement: $ => prec.left(seq('next', optional($.expression))),

    yield_expression: $ => prec.left(seq('yield', optional(choice(
      $.argument_list,
      $.expression,
    )))),

    // =========================================================================
    // TYPE DEFINITIONS
    // =========================================================================
    class_def: $ => seq(
      optional('abstract'),
      'class',
      field('name', $.type_name),
      optional(seq('<', field('superclass', $.type))),
      optional($._body),
      'end',
    ),

    struct_def: $ => seq(
      optional('abstract'),
      'struct',
      field('name', $.type_name),
      optional(seq('<', field('superclass', $.type))),
      optional($._body),
      'end',
    ),

    module_def: $ => seq(
      'module',
      field('name', $.type_name),
      optional($._body),
      'end',
    ),

    enum_def: $ => seq(
      'enum',
      field('name', $._type_identifier),
      optional(seq(':', field('base_type', $.type))),
      $._terminator,
      repeat(choice($.enum_member, $.method_def, $._terminator)),
      'end',
    ),

    enum_member: $ => seq(
      $.constant,
      optional(seq('=', $.expression)),
    ),

    method_def: $ => seq(
      'def',
      choice(
        field('name', $._def_name),
        seq('self', '.', field('name', $._def_name)),
      ),
      optional($.method_params),
      optional(seq(':', field('return_type', $.type))),
      optional(seq('forall', commaSep1($.constant))),
      optional($._body),
      'end',
    ),

    _def_name: $ => choice(
      $._method_name,
      $.setter_method_name,
      $.operator_method_def,
    ),

    abstract_def: $ => prec.left(seq(
      'abstract',
      'def',
      choice(
        field('name', $._def_name),
        seq('self', '.', field('name', $._def_name)),
      ),
      optional($.method_params),
      optional(seq(':', field('return_type', $.type))),
    )),

    operator_method_def: $ => choice(
      '+', '-', '*', '/', '//', '%', '**',
      '&+', '&-', '&*', '&**',
      '==', '!=', '<', '>', '<=', '>=', '<=>',
      '&', '|', '^', '~', '<<', '>>',
      '[]', '[]=', '[]?',
      '!', '=~', '!~',
    ),

    method_params: $ => seq(
      '(',
      commaSep($.param),
      ')',
    ),

    param: $ => choice(
      $._simple_param,
      $.splat_param,
      $.double_splat_param,
      $.block_param_def,
    ),

    _simple_param: $ => seq(
      field('name', choice($.identifier, $.instance_variable)),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('default', $.expression))),
    ),

    splat_param: $ => seq('*', optional($.identifier)),

    double_splat_param: $ => seq('**', $.identifier, optional(seq(':', $.type))),

    block_param_def: $ => seq('&', optional(choice(
      seq($.identifier, optional(seq(':', $.type))),
      seq(':', $.type),  // anonymous block with type: & : IO ->
    ))),

    // =========================================================================
    // MACRO DEFINITIONS
    // =========================================================================
    macro_def: $ => seq(
      'macro',
      field('name', $.identifier),
      optional($.method_params),
      $._terminator,
      optional($.macro_body),
      'end',
    ),

    macro_body: $ => repeat1(choice(
      $.macro_expression,
      $.macro_control,
      $.macro_interpolation,
      /[^{%\\]+/,  // plain text
    )),

    macro_expression: $ => seq('{{', /[^}]+/, '}}'),

    visibility_modifier: $ => seq(
      choice('private', 'protected'),
      choice($.method_def, $.class_def, $.struct_def, $.module_def, $.enum_def, $.constant, $.call, $.assignment, $.type_declaration),
    ),

    // =========================================================================
    // LIB / C BINDINGS
    // =========================================================================
    type: $ => choice(
      $.constant,
      $.generic_type,
      $.union_type,
      $.nilable_type,
      $.pointer_type,
      $.static_array_type,
      $.proc_type,
      $.tuple_type,
      $.named_tuple_type,
      $.self_type,
      $.typeof_type,
      $.underscore_type,
      $.scoped_type,
    ),

    // Type name used in class/module/struct definitions — allows Foo, Foo(T), Foo::Bar, Foo::Bar(T)
    type_name: $ => prec(1, choice(
      $.constant,
      $.generic_type_def,
      $.scoped_type_name,
    )),

    // Scoped type name for definitions: Foo::Bar, Foo::Bar::Baz, Foo::Bar(T)
    scoped_type_name: $ => prec.left(1, seq(
      $._type_identifier,
      '::',
      choice($.constant, $.generic_type_def),
    )),

    // Helper: constant or scoped constant in type name position
    _type_identifier: $ => choice(
      $.constant,
      $.scoped_type_name,
    ),

    union_type: $ => prec.left(1, seq($.type, '|', $.type)),

    proc_type: $ => prec.right(choice(
      // Canonical form: Proc(Int32, String)
      seq(
        'Proc',
        '(',
        commaSep($.type),
        ')',
      ),
      // Arrow form: Int32 -> String, -> Nil
      // Single arg doesn't need parens, multi-arg uses parens
      seq($.type, '->', optional($.type)),
      // No-arg arrow form: -> Nil, ->
      seq('->', optional($.type)),
    )),

    type_declaration: $ => prec.right(PREC.ASSIGN, seq(
      field('name', choice($.identifier, $.instance_variable, $.class_variable)),
      ':',
      field('type', $.type),
      optional(seq('=', field('value', $.expression))),
    )),

    // =========================================================================
    // SPECIAL EXPRESSIONS
    // =========================================================================
    offsetof_expression: $ => seq('offsetof', '(', $.type, ',', $.identifier, ')'),

    primary: $ => choice(
      $.literal,
      $.identifier,
      $.method_identifier,
      $.instance_variable,
      $.class_variable,
      $.global_variable,
      $.constant,
      $.scoped_constant,
      $.generic_instance,
      $.parenthesized_expression,
      $.self,
      $.proc_literal,
    ),

    // Scoped constant access: Foo::Bar, Foo::Bar::Baz
    scoped_constant: $ => prec.left(PREC.SCOPE, seq(
      choice($.constant, $.scoped_constant),
      '::',
      $.constant,
    )),

    // Generic type used as expression: Array(Int32), Hash(String, Int32), Foo::Bar(Int32)
    self: $ => 'self',

    // =========================================================================
    // METHOD NAMES
    // =========================================================================
    // Method name: identifier or identifier with ? or ! suffix
    _method_name: $ => choice($.identifier, $.method_identifier),

    // Methods with ? or ! suffix: empty?, valid?, save!
    method_identifier: $ => METHOD_IDENTIFIER,

    // Setter method name: foo= (only valid in def)
    setter_method_name: $ => SETTER_IDENTIFIER,

    // =========================================================================
    // LITERALS
    // =========================================================================
    bool_literal: $ => choice('true', 'false'),

    integer_literal: $ => token(choice(
      // Decimal with optional type suffix (i8, i16, i32, i64, i128, u8, u16, u32, u64, u128)
      seq(optional('-'), /[0-9][0-9_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Hex
      seq(optional('-'), /0x[0-9a-fA-F][0-9a-fA-F_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Octal
      seq(optional('-'), /0o[0-7][0-7_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Binary
      seq(optional('-'), /0b[01][01_]*/, optional(/[iu](8|16|32|64|128)/)),
    )),

    string_literal: $ => seq(
      $._string_start,
      repeat(choice(
        $.string_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._string_end,
    ),

    symbol_literal: $ => choice(
      seq(':', token.immediate(IDENTIFIER)),
      seq(':', token.immediate(METHOD_IDENTIFIER)),
      seq(':', token.immediate(SETTER_IDENTIFIER)),
      seq(':', token.immediate(CONSTANT)),
      seq(':"', /[^"]+/, '"'),
    ),

    // =========================================================================
    // COLLECTION LITERALS
    // =========================================================================
    identifier: $ => IDENTIFIER,

    instance_variable: $ => seq('@', token.immediate(IDENTIFIER)),

    constant: $ => CONSTANT,

    // =========================================================================
    // COMMENT
    // =========================================================================
