test/corpus/operators.txt
================================================================================
Operator assignment +=
================================================================================

x += 1

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Operator assignment -=
================================================================================

x -= 1

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Operator assignment *=
================================================================================

x *= 2

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Operator assignment ||=
================================================================================

x ||= 1

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Operator assignment &&=
================================================================================

x &&= 1

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Operator assignment <<=
================================================================================

x <<= 2

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Operator assignment **=
================================================================================

x **= 3

--------------------------------------------------------------------------------

(source_file
  (operator_assignment
    (assignment_target
      (identifier))
    (primary
      (integer_literal))))

================================================================================
Range expression inclusive
================================================================================

1..10

--------------------------------------------------------------------------------

(source_file
  (range_expression
    begin: (primary
      (integer_literal))
    end: (primary
      (integer_literal))))

================================================================================
Range expression exclusive
================================================================================

1...10

--------------------------------------------------------------------------------

(source_file
  (range_expression
    begin: (primary
      (integer_literal))
    end: (primary
      (integer_literal))))

================================================================================
Not nil expression
================================================================================

x.not_nil!

--------------------------------------------------------------------------------

(source_file
  (not_nil_expression
    (primary
      (identifier))))
